dockerize no dcker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
       context: ./nodejs
       dockerfile: Dockerfile
     image: 'douglasmarinhosilva/nodejsdesafio'
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 60s docker-entrypoint.sh 
+    command: [ "node","index.js" ]
     container_name: app
     networks:
       - desafio-fullcycle
-    volumes:
-      - ./nodejs:/usr/src/app
     tty: true
     
     depends_on:
@@ -30,7 +30,6 @@ services:
     ports:
       - 8080:80
     depends_on:
-      - db
       - app
 
   db:
