--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,8 +1,16 @@
-FROM node:15.13.0-alpine3.12
+FROM node:15
 
 WORKDIR /usr/src/app
 
 COPY .  .
+
+RUN npm install express --save && \
+    npm install mysql --save
+
+ENV DOCKERIZE_VERSION v0.7.0
+RUN wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
+    && apt-get autoremove -yqq --purge wget && \
+    rm -rf /var/lib/apt/lists/*
 
 EXPOSE 3000
 
