--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -2,16 +2,15 @@ FROM node:15
 
 WORKDIR /usr/src/app
 
-COPY .  .
-
-RUN npm install express --save && \
-    npm install mysql --save
+COPY package.json .
+RUN npm install
+COPY . .
 
 ENV DOCKERIZE_VERSION v0.7.0
 RUN wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
     && apt-get autoremove -yqq --purge wget && \
     rm -rf /var/lib/apt/lists/*
 
-EXPOSE 3000
 
-CMD [ "node","index.js" ]
+ 
+EXPOSE 3000
